fix: change border and outline to avoid layout shift

--- a/registration-form/styles/fields/input.css
+++ b/registration-form/styles/fields/input.css
@@ -2,7 +2,8 @@ input, textarea, select {
   appearance: none;
   width: 100%;
   border-radius: 0.5rem;
-  border: 1px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default); 
+  border: 2px solid transparent;
   padding: 0.75rem 1rem;
   font: var(--text);
 }
@@ -17,7 +18,7 @@ label {
 input:focus, textarea:focus, select:focus,
 input[type="date"]:focus-within {
   outline: 0.25rem solid var(--surface-secondary);
-  border: 0.125rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: 0.1px;
 }
 
